plugins {
    id 'java'
    id('com.gradleup.shadow') version('8.3.5')
    id('io.freefair.lombok') version('8.4') apply false
}

group = 'de.teamholy'
version = '1.0-SNAPSHOT'

ext {
    coreVersion = '2.9.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'com.gradleup.shadow'
    apply plugin: 'maven-publish'
    apply plugin: 'io.freefair.lombok'

    group = 'de.teamholy'
    version = '1.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    test {
        useJUnitPlatform()
    }

    repositories {
        mavenCentral()
        maven {
            name = 'spigotmc-repo'
            url = uri('https://hub.spigotmc.org/nexus/content/repositories/public/')
            metadataSources { gradleMetadata(); mavenPom(); artifact() }
            content {
                includeGroup 'net.md-5'
                includeGroup 'org.spigotmc'
            }
        }
        maven {
            name = 'cloudnet-releases'
            url = uri('https://repo.cloudnetservice.eu/releases/')
            metadataSources { gradleMetadata(); mavenPom(); artifact() }
            content {
                includeGroup 'de.dytanic.cloudnet'
                includeGroup 'eu.cloudnetservice'
            }
        }
        maven { url "https://repo.dmulloy2.net/repository/public/" }
        maven {
            name = 'sonatype'
            url = 'https://oss.sonatype.org/content/groups/public/'
        }
        maven { url "https://repo.codemc.io/repository/maven-public/" }
        maven { url "https://repo.glaremasters.me/repository/concuncan/" }
        maven { url "https://api.insights-api.top/deployment/repo" }
        maven { url 'https://maven.enginehub.org/repo/' }
        maven {
            name = 'GitHubPackagesHolyCore'
            url = uri('https://maven.pkg.github.com/teamholy-network/holy-core')
            credentials {
                username = project.findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                password = project.findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
            }
            content {
                includeGroup 'de.teamholy'
            }
        }
        mavenLocal()

    }

    configurations.all {
        resolutionStrategy {
            force "org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT"
        }
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.9.1')
        testImplementation 'org.junit.jupiter:junit-jupiter'

        compileOnly("de.teamholy:holy-core-api:$coreVersion")
        compileOnly "de.teamholy:bukkit-core-api:${coreVersion}"
        compileOnly "de.teamholy:bungee-core-api:${coreVersion}"
        compileOnly "de.teamholy:bukkit-markupapi:${coreVersion}"
        compileOnly 'com.comphenix.protocol:ProtocolLib:5.3.0'
        compileOnly 'eu.koboo:en2do:3.1.9'
        compileOnly 'io.netty:netty-codec:4.1.97.Final'
        compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
        compileOnly 'net.md-5:brigadier:1.0.16-SNAPSHOT'
        compileOnly('org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT') {
            transitive = false
        }
        compileOnly 'com.github.azbh111:craftbukkit-1.8.8:R'
        compileOnly 'org.mongodb:mongo-java-driver:3.12.8'
        compileOnly 'org.redisson:redisson:3.19.1'
        compileOnly 'de.dytanic.cloudnet:cloudnet-wrapper-jvm:3.4.0-RELEASE'
        compileOnly 'de.dytanic.cloudnet:cloudnet-syncproxy:3.4.0-RELEASE'
        compileOnly 'de.dytanic.cloudnet:cloudnet-bridge:3.4.0-RELEASE'
        compileOnly 'com.grinderwolf:slimeworldmanager-api:2.2.1'
        compileOnly 'com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.9'
    }

    // games-common wird in jedes Game-Jar eingebettet (relocated) und nicht eigenständig publiziert
    if (project.name != 'games-common') {
        dependencies {
            implementation project(':games-common')
        }

        shadowJar {
            relocate 'de.teamholy.gamescommon', "de.teamholy.${project.name.toLowerCase()}.common"
        }

        publishing {
            publications {
                shadow(MavenPublication) {
                    from components.shadow
                    artifactId = project.name.toLowerCase()
                }
            }
            repositories {
                maven {
                    name = 'GitHubPackages'
                    url = uri('https://maven.pkg.github.com/teamholy-network/holy-games')
                    credentials {
                        username = project.findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                        password = project.findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
                    }
                }
            }
        }
    }
}
